# fap-rs

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/libfap-1.5/src/: helpers.c
tests/: parse.rs
