[package]
name = "fap"
version = "0.2.1"
authors = ["Dmitry Azovtsev <dmitry@azovtsev.com>"]
description = "Rust warpper around Fabulous APRS Parser (aka libfap)"
documentation = "https://docs.rs/fap/"
repository = "https://github.com/azov/fap-rs"
license = "Artistic-1.0-Perl"

[dependencies]
aprs = { version="0.3"}
humantime = "1"

[dev-dependencies]
approx = "0.2"

[build-dependencies]
cc = "1"
bindgen = "0.37"
