[package]
name = "fap"
version = "0.2.1"
authors = ["Dmitry Azovtsev <dmitry@azovtsev.com>"]
description = "Rust warpper around Fabulous APRS Parser (aka libfap)"
documentation = "https://docs.rs/fap/"
repository = "https://github.com/azov/fap-rs"
license = "Artistic-1.0-Perl"
edition = "2024"

[dependencies]
#aprs = "0.3"
aprs = { git="https://github.com/databeacon/aprs-rs.git", rev="0.3.1-databeacon"}
humantime = "2.2.0"

[dev-dependencies]
approx = "0.5.1"

[build-dependencies]
cc = "1"
bindgen = "0.71.1"
